{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "d3cdb302-42dc-47f8-b8f2-418738e05435",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "2697472e-9b8d-43c0-8d09-58058b3e0448",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "8b8573d9-9921-4594-8336-0469a46677dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57fcf74c-9af6-44b1-b74b-5983563b3cc7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e8c43754-70bc-43bc-9b17-0671c6c55a1c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}